[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "method_name"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
password-checker-shared = { path = "../../shared" }
risc0-zkvm = { version = "0.16.1", default-features = false, features = [ "std" ] }
